--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  CHANGES:
  
    * Formats using Knit-based repository formats are now explicitly
      marked as deprecated. (Ian Clatworthy)

    * ``LRUCache(after_cleanup_size)`` was renamed to
      ``after_cleanup_count`` and the old name deprecated. The new name is
      used for clarity, and to avoid confusion with
      ``LRUSizeCache(after_cleanup_size)``. (John Arbash Meinel)

  NEW FEATURES:

    * Add support for `bzr tags -r 1..2`, that is we now support showing
      tags applicable for a specified revision range. (Marius Kruger)

    * ``authentication.conf`` now accepts pluggable read-only credential
      stores. Such a plugin (``netrc_credential_store``) is now included,
      handles the ``$HOME/.netrc`` file and can server as an example to
      implement other plugins.
      (Vincent Ladeuil)

    * ``shelve --list`` can now be used to list shelved changes.
      (Aaron Bentley)

  IMPROVEMENTS:

    * Add trailing slash to directories in all output of ``bzr ls``, except
      ``bzr ls --null``. (Gordon P. Hemsley, #306424)

    * ``bzr revision-info`` now supports a -d option to specify an
      alternative branch. (Michael Hudson)

    * Support the Claws mail client directly, rather than via
      xdg-email. This prevents the display of an unnecessary modal
      dialog in Claws, informing the user that a file has been
      attached to the message, and works around bug #291847 in
      xdg-utils which corrupts the destination address.

  BUG FIXES:
  
    * Allow BzrDir implementation to implement backing up of 
      control directory. (#139691)

    * ``bzr push`` creating a new stacked branch will now only open a
      single connection to the target machine. (John Arbash Meinel)

    * Don't call iteritems on transport_list_registry, because it may
      change during iteration.  (Martin Pool, #277048)
